[gd_scene format=3 uid="uid://cabi42rfhbvom"]

[ext_resource type="Script" uid="uid://ckhc0m42wwpjw" path="res://Scenes/menu.gd" id="1_36iol"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_36iol"]
load_path = "res://.godot/imported/170606-6141-03-hVjm8.jpg-887c6d76a857ccffa427979680b72859.ctex"

[node name="MenuScene" type="Node2D" unique_id=1783535340]
script = ExtResource("1_36iol")

[node name="Background" type="TextureRect" parent="." unique_id=892141284]
offset_right = 400.0
offset_bottom = 280.0
scale = Vector2(1.7579379, 1.7530211)
texture = SubResource("CompressedTexture2D_36iol")

[node name="VBoxContainer" type="VBoxContainer" parent="Background" unique_id=1619064872]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -43.5
offset_top = -50.5
offset_right = 43.5
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2

[node name="Btn_Level1" type="Button" parent="Background/VBoxContainer" unique_id=434736732]
layout_mode = 2
text = "Level 1"

[node name="Btn_Level2" type="Button" parent="Background/VBoxContainer" unique_id=295061127]
layout_mode = 2
text = "Level 2"

[node name="Btn_Exit" type="Button" parent="Background/VBoxContainer" unique_id=2026750664]
layout_mode = 2
text = "Exit Game"

[connection signal="pressed" from="Background/VBoxContainer/Btn_Level1" to="." method="_on_btn_level_1_pressed"]
[connection signal="pressed" from="Background/VBoxContainer/Btn_Level2" to="." method="_on_btn_level_2_pressed"]
[connection signal="pressed" from="Background/VBoxContainer/Btn_Exit" to="." method="_on_btn_exit_pressed"]
